<resources>
    <string name="app_name">EnterpriseIMS</string>
    <string name="sign_in_header">IMS Android: Sign In</string>
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_warning"><![CDATA[<strong>Warning</strong>: Access to IMS Android is restricted to authorized users only. Please sign in to continue.]]></string>
    <string name="error_message"><![CDATA[<strong>Error</strong>: %1$s]]></string>
    <string name="success_message"><![CDATA[<strong>%1$s]]></string>
    <string name="dashboard_header">IMS Android: Dashboard</string>
    <string name="signed_in_as">Signed in as: %1$s</string>
    <string name="admin_badge_text">Administrator</string>
    <string name="search">Search</string>
    <string name="transactions">Transactions</string>
    <string name="administration">Administration</string>
    <string name="sign_out">Sign Out</string>
    <string name="confirm_sign_out_title">Confirm Sign Out</string>
    <string name="confirm_sign_out_message">Are you sure you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="admin_header">IMS Android: Administration</string>
    <string name="back">Back</string>
    <string name="asset_management">Asset Management</string>
    <string name="add_asset">Add an Asset</string>
    <string name="edit_asset">Modify an Existing Asset</string>
    <string name="delete_asset">Delete an Existing Asset</string>
    <string name="user_management">User Management</string>
    <string name="provision_user">Provision a User Account</string>
    <string name="edit_user">Modify an Existing User Account</string>
    <string name="delete_user">Delete an Existing User Account</string>
    <string name="add_user_header">IMS Android: Add a User</string>
    <string name="confirm_exit_title">Confirm Exit</string>
    <string name="confirm_password_label">Confirm Password:</string>
    <string name="name_label">Name:</string>
    <string name="admin_label">Is this User an Administrator?</string>
    <string-array name="yes_no">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <string name="confirm_exit_message">Are you sure you want to exit? Your changes will be lost.</string>
    <string name="submit">Submit</string>
    <string name="delete_user_header">IMS Android: Delete a User</string>
    <string name="delete_user_label">Select User to Delete:</string>
</resources>