<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteUserActivity">

    <TextView
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@color/primary"
        android:gravity="bottom"
        android:padding="20dp"
        android:text="@string/delete_user_header"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bt_back"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll_view"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_back">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_error"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:background="@drawable/bg_error"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_success"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:background="@drawable/bg_success"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_user_label"
                android:textColor="@color/black"
                android:layout_marginEnd="10dp"
                android:labelFor="@id/et_username"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:id="@+id/sp_user"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_submit"
            android:text="@string/submit"/>

    </LinearLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/indicator"
        android:indeterminate="true"
        android:visibility="invisible"
        app:indicatorSize="60dp"
        app:trackThickness="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/ll_view"/>

</androidx.constraintlayout.widget.ConstraintLayout>