<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:id="@+id/appbar"
        android:padding="20dp"
        android:text="@string/sign_in_header"
        android:background="@color/primary"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:gravity="bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_warning"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/bg_warning"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_error"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/bg_error"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_warning"
        android:visibility="gone"
       />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ll_view"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_error">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_label"
                android:textColor="@color/black"
                android:layout_marginEnd="20dp"
                android:labelFor="@id/et_username"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:id="@+id/et_username"
                android:ems="10"
                android:backgroundTint="@color/primary"
                android:autofillHints="username"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_label"
                android:textColor="@color/black"
                android:layout_marginEnd="20dp"
                android:labelFor="@id/et_username"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/et_password"
                android:ems="10"
                android:backgroundTint="@color/primary"
                android:autofillHints="password"
                android:inputType="textPassword"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_sign_in"
            android:text="@string/sign_in"/>

    </LinearLayout>

   <com.google.android.material.progressindicator.CircularProgressIndicator
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/indicator"
       android:indeterminate="true"
       android:visibility="invisible"
       app:indicatorSize="60dp"
       app:trackThickness="5dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginTop="50dp"
       app:layout_constraintTop_toBottomOf="@id/ll_view"/>

</androidx.constraintlayout.widget.ConstraintLayout>